--- a/index.html
+++ b/index.html
@@ -6,84 +6,79 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Nexus XP</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    .shortcut {
-      @apply bg-black/60 text-white px-2 py-1 rounded shadow hover:bg-black/80 cursor-pointer w-max text-xs font-mono;
-    }
-
-    .modal {
-      @apply fixed inset-0 bg-black/60 hidden items-center justify-center z-50;
-    }
-
-    .modal-window {
-      @apply bg-white w-full max-w-sm rounded shadow-xl border border-gray-300;
-    }
-
-    .modal-header {
-      @apply bg-blue-700 text-white font-bold px-3 py-2 flex justify-between items-center rounded-t;
-    }
-
-    .modal-header button {
-      @apply text-white hover:text-gray-300;
-    }
-
-    .modal-body {
-      @apply p-4 text-black bg-white rounded-b;
-    }
-  </style>
 </head>
 
 <body class="relative h-screen w-screen overflow-hidden m-0 p-0">
 
-  <!-- Local Background Image -->
+  <!-- Bliss Background -->
   <img src="Background.png" alt="XP Bliss" class="absolute inset-0 object-cover w-full h-full z-0" />
 
   <!-- Shortcut Icons -->
   <div class="absolute top-4 right-4 z-10">
-    <div class="absolute top-0 right-0" onclick="openModal('modal-x')">
-      <div class="shortcut">X.exe</div>
-    </div>
-    <div class="absolute top-16 right-4" onclick="openModal('modal-ca')">
-      <div class="shortcut">Contract.exe</div>
-    </div>
-    <div class="absolute top-32 right-2" onclick="openModal('modal-nudes')">
-      <div class="shortcut">Nudes.exe</div>
-    </div>
-    <div class="absolute top-[160px] right-[60px]" onclick="openModal('modal-telegram')">
-      <div class="shortcut">Telegram.exe</div>
-    </div>
+    <div
+      class="absolute top-0 right-0 cursor-pointer bg-black bg-opacity-60 text-white text-xs font-mono px-2 py-1 rounded shadow hover:bg-opacity-80"
+      onclick="openModal('modal-x')">X.exe</div>
+    <div
+      class="absolute top-16 right-4 cursor-pointer bg-black bg-opacity-60 text-white text-xs font-mono px-2 py-1 rounded shadow hover:bg-opacity-80"
+      onclick="openModal('modal-ca')">Contract.exe</div>
+    <div
+      class="absolute top-32 right-2 cursor-pointer bg-black bg-opacity-60 text-white text-xs font-mono px-2 py-1 rounded shadow hover:bg-opacity-80"
+      onclick="openModal('modal-nudes')">Nudes.exe</div>
+    <div
+      class="absolute top-[160px] right-[60px] cursor-pointer bg-black bg-opacity-60 text-white text-xs font-mono px-2 py-1 rounded shadow hover:bg-opacity-80"
+      onclick="openModal('modal-telegram')">Telegram.exe</div>
   </div>
 
   <!-- Modals -->
-  <div id="modal-x" class="modal">
-    <div class="modal-window">
-      <div class="modal-header">X.exe <button onclick="closeModal('modal-x')">✖</button></div>
-      <div class="modal-body">This is the modal content for X.exe.</div>
+  <div id="modal-x" class="fixed inset-0 bg-black/60 hidden items-center justify-center z-50">
+    <div class="bg-white w-full max-w-sm rounded shadow-xl border border-gray-300">
+      <div class="bg-blue-700 text-white font-bold px-3 py-2 flex justify-between items-center rounded-t">
+        X.exe
+        <button onclick="closeModal('modal-x')" class="text-white hover:text-gray-300">✖</button>
+      </div>
+      <div class="p-4 text-black bg-white rounded-b">
+        This is the modal content for X.exe.
+      </div>
     </div>
   </div>
 
-  <div id="modal-ca" class="modal">
-    <div class="modal-window">
-      <div class="modal-header">Contract.exe <button onclick="closeModal('modal-ca')">✖</button></div>
-      <div class="modal-body">Here’s the contract address info.</div>
+  <div id="modal-ca" class="fixed inset-0 bg-black/60 hidden items-center justify-center z-50">
+    <div class="bg-white w-full max-w-sm rounded shadow-xl border border-gray-300">
+      <div class="bg-blue-700 text-white font-bold px-3 py-2 flex justify-between items-center rounded-t">
+        Contract.exe
+        <button onclick="closeModal('modal-ca')" class="text-white hover:text-gray-300">✖</button>
+      </div>
+      <div class="p-4 text-black bg-white rounded-b">
+        Here's the contract address info.
+      </div>
     </div>
   </div>
 
-  <div id="modal-nudes" class="modal">
-    <div class="modal-window">
-      <div class="modal-header">Nudes.exe <button onclick="closeModal('modal-nudes')">✖</button></div>
-      <div class="modal-body">Sorry! No nudes here — just an XP clone 😎</div>
+  <div id="modal-nudes" class="fixed inset-0 bg-black/60 hidden items-center justify-center z-50">
+    <div class="bg-white w-full max-w-sm rounded shadow-xl border border-gray-300">
+      <div class="bg-blue-700 text-white font-bold px-3 py-2 flex justify-between items-center rounded-t">
+        Nudes.exe
+        <button onclick="closeModal('modal-nudes')" class="text-white hover:text-gray-300">✖</button>
+      </div>
+      <div class="p-4 text-black bg-white rounded-b">
+        Sorry! No nudes here — just an XP clone 😎
+      </div>
     </div>
   </div>
 
-  <div id="modal-telegram" class="modal">
-    <div class="modal-window">
-      <div class="modal-header">Telegram.exe <button onclick="closeModal('modal-telegram')">✖</button></div>
-      <div class="modal-body">Join our community on Telegram!</div>
+  <div id="modal-telegram" class="fixed inset-0 bg-black/60 hidden items-center justify-center z-50">
+    <div class="bg-white w-full max-w-sm rounded shadow-xl border border-gray-300">
+      <div class="bg-blue-700 text-white font-bold px-3 py-2 flex justify-between items-center rounded-t">
+        Telegram.exe
+        <button onclick="closeModal('modal-telegram')" class="text-white hover:text-gray-300">✖</button>
+      </div>
+      <div class="p-4 text-black bg-white rounded-b">
+        Join our community on Telegram!
+      </div>
     </div>
   </div>
 
-  <!-- JavaScript -->
+  <!-- JS Modal Logic -->
   <script>
     function openModal(id) {
       const modal = document.getElementById(id);
