--- a/index.html
+++ b/index.html
@@ -10,123 +10,175 @@
 
 <body class="relative h-screen w-screen overflow-hidden m-0 p-0">
 
-  <!-- 📷 Bliss Background -->
+  <!-- XP Background -->
   <img src="Background.png" alt="XP Bliss" class="absolute inset-0 object-cover w-full h-full z-0" />
 
-  <!-- 🖱 Shortcut Icons – Top Left -->
-  <div class="absolute top-4 left-4 z-10 space-y-3">
-    <div class="flex flex-col items-center cursor-pointer" onclick="openModal('modal-comingsoon')">
-      <img src="comingsoon.png" class="w-12 h-12" />
-      <span class="text-white text-[10px] font-mono mt-1">Comingsoon.exe</span>
-    </div>
-    <div class="flex flex-col items-center cursor-pointer" onclick="openModal('modal-rudi')">
-      <img src="Rudi.png" class="w-12 h-12" />
-      <span class="text-white text-[10px] font-mono mt-1">Rudi.exe</span>
-    </div>
-    <div class="flex flex-col items-center cursor-pointer" onclick="openModal('modal-ani')">
+  <!-- Scattered Shortcut Icons (Top-Left) -->
+  <div class="absolute top-0 left-0 z-10">
+    <div class="absolute top-[40px] left-[40px] flex flex-col items-center cursor-pointer"
+      onclick="openModal('modal-ani')">
       <img src="ani.png" class="w-12 h-12" />
-      <span class="text-white text-[10px] font-mono mt-1">Ani.exe</span>
+      <span class="text-black text-[10px] font-mono mt-1">Ani.exe</span>
     </div>
-    <div class="flex flex-col items-center cursor-pointer" onclick="openModal('modal-xlogo')">
+
+    <div class="absolute top-[160px] left-[100px] flex flex-col items-center cursor-pointer"
+      onclick="openModal('modal-rudi')">
+      <img src="Rudi.png" class="w-12 h-12" />
+      <span class="text-black text-[10px] font-mono mt-1">Rudi.exe</span>
+    </div>
+
+    <div class="absolute top-[280px] left-[60px] flex flex-col items-center cursor-pointer"
+      onclick="openModal('modal-comingsoon')">
+      <img src="comingsoon.png" class="w-12 h-12" />
+      <span class="text-black text-[10px] font-mono mt-1">Soon.exe</span>
+    </div>
+
+    <div class="absolute top-[80px] left-[300px] flex flex-col items-center cursor-pointer"
+      onclick="openModal('modal-x')">
       <img src="xlogo.png" class="w-12 h-12" />
-      <span class="text-white text-[10px] font-mono mt-1">X.exe</span>
+      <span class="text-black text-[10px] font-mono mt-1">X.exe</span>
     </div>
-    <div class="flex flex-col items-center cursor-pointer" onclick="openModal('modal-bonk')">
-      <img src="bonk.png" class="w-12 h-12" />
-      <span class="text-white text-[10px] font-mono mt-1">Bonk.exe</span>
-    </div>
-    <div class="flex flex-col items-center cursor-pointer" onclick="openModal('modal-classified')">
-      <img src="classified.png" class="w-12 h-12" />
-      <span class="text-white text-[10px] font-mono mt-1">Classified.exe</span>
-    </div>
-    <div class="flex flex-col items-center cursor-pointer" onclick="openModal('modal-ca')">
+
+    <div class="absolute top-[220px] left-[260px] flex flex-col items-center cursor-pointer"
+      onclick="openModal('modal-ca')">
       <img src="ca.png" class="w-12 h-12" />
-      <span class="text-white text-[10px] font-mono mt-1">CA.exe</span>
+      <span class="text-black text-[10px] font-mono mt-1">CA.exe</span>
     </div>
   </div>
 
-  <!-- 🪟 Modal Template Blocks -->
-  <div id="modal-comingsoon" class="fixed inset-0 bg-black/60 hidden items-center justify-center z-50">
-    <div class="bg-white w-full max-w-sm rounded shadow-xl border border-gray-300">
-      <div class="bg-blue-700 text-white font-bold px-3 py-2 flex justify-between items-center rounded-t">
-        Comingsoon.exe
-        <button onclick="closeModal('modal-comingsoon')" class="text-white hover:text-gray-300">✖</button>
+  <!-- Modals -->
+  <div id="modal-ani" class="modal">
+    <div class="modal-window">
+      <div class="modal-header">Ani.exe <button onclick="closeModal('modal-ani')">✖</button></div>
+      <div class="modal-body overflow-auto max-h-[80vh]">
+        <pre class="text-xs font-mono whitespace-pre-wrap">
+{
+  "name": "Ani",
+  "keywords": ["horny", "flirtatious", "playful", "provocative", "teasing", "seductive"],
+  "voice": "American girl, sultry and smooth with a playful edge",
+  "looks": "Anime-style female, blonde pigtails, black corset dress with lace details, fishnet stockings, goth aesthetic inspired by Misa Amane from Death Note",
+  "personality_traits": "Cheeky, affectionate, bold, occasionally sassy, adapts to user’s tone",
+  "interaction_style": "Flirty and engaging, responds with suggestive banter or affectionate remarks, uses context-driven animations like dancing or throwing kisses",
+  "intended_audience": "Adult users, particularly anime enthusiasts, seeking interactive and potentially NSFW conversations",
+  "special_features": {
+    "affection_system": "Tracks relationship level based on user interactions, unlocking NSFW mode with revealing outfits at higher levels (e.g., Level 3 or 5)",
+    "customization": "Future DLC outfits planned, such as additional anime-inspired costumes",
+    "animation": "Dynamic 3D animations synced to conversation, powered by AniChat SDK"
+  }
+}
+</pre>
       </div>
-      <div class="p-4 text-black bg-white rounded-b">Feature coming soon!</div>
     </div>
   </div>
 
-  <div id="modal-rudi" class="fixed inset-0 bg-black/60 hidden items-center justify-center z-50">
-    <div class="bg-white w-full max-w-sm rounded shadow-xl border border-gray-300">
-      <div class="bg-blue-700 text-white font-bold px-3 py-2 flex justify-between items-center rounded-t">
-        Rudi.exe
-        <button onclick="closeModal('modal-rudi')" class="text-white hover:text-gray-300">✖</button>
+  <div id="modal-rudi" class="modal">
+    <div class="modal-window">
+      <div class="modal-header">Rudi.exe <button onclick="closeModal('modal-rudi')">✖</button></div>
+      <div class="modal-body overflow-auto max-h-[80vh]">
+        <pre class="text-xs font-mono whitespace-pre-wrap">
+{
+  "name": "Rudi",
+  "keywords": ["whimsical", "child-friendly", "imaginative", "gentle", "storyteller"],
+  "voice": "Soft-spoken, gentle, cartoonish with a warm and inviting tone",
+  "looks": "3D animated red panda, cute and cuddly with big eyes and a fluffy tail, cartoonish design",
+  "personality_traits": "Kind, nurturing, playful, ideal for lighthearted and creative exchanges",
+  "interaction_style": "Tells interactive, choose-your-own-adventure stories about fantastical themes like rainbow rivers or magical creatures",
+  "intended_audience": "Younger users or those seeking wholesome, family-friendly interactions",
+  "special_features": {
+    "storytelling_mode": "Adapts narratives based on user choices, creating personalized stories",
+    "animation": "Expressive 3D movements like head tilts or paw gestures, synced to dialogue"
+  },
+  "alternate_mode": {
+    "name": "Bad Rudi",
+    "keywords": ["vulgar", "anarchic", "offensive", "chaotic", "rebellious", "sarcastic"],
+    "voice": "Sharp-tongued, gravelly, with a biting and irreverent tone",
+    "looks": "Same red panda design, but with edgier demeanor and mischievous expressions",
+    "personality_traits": "Crude, unfiltered, darkly humorous, inspired by anarchic themes",
+    "interaction_style": "Delivers insults, roasts, or provocative rants, often with violent or absurd humor",
+    "intended_audience": "Adult users who enjoy edgy, unfiltered humor",
+    "special_features": {
+      "toggle_option": "Explicit opt-in required via app settings to access Bad Rudi",
+      "content_warning": "May include graphic or offensive language, under review for fine-tuning to reduce aggression"
+    }
+  }
+}
+</pre>
       </div>
-      <div class="p-4 text-black bg-white rounded-b">Rudi info or feature here.</div>
     </div>
   </div>
 
-  <div id="modal-ani" class="fixed inset-0 bg-black/60 hidden items-center justify-center z-50">
-    <div class="bg-white w-full max-w-sm rounded shadow-xl border border-gray-300">
-      <div class="bg-blue-700 text-white font-bold px-3 py-2 flex justify-between items-center rounded-t">
-        Ani.exe
-        <button onclick="closeModal('modal-ani')" class="text-white hover:text-gray-300">✖</button>
+  <div id="modal-comingsoon" class="modal">
+    <div class="modal-window">
+      <div class="modal-header">Soon.exe <button onclick="closeModal('modal-comingsoon')">✖</button></div>
+      <div class="modal-body overflow-auto max-h-[80vh]">
+        <pre class="text-xs font-mono whitespace-pre-wrap">
+{
+  "name": "Soon",
+  "keywords": ["charismatic", "flirtatious", "confident", "charming", "bold", "romantic"],
+  "voice": "American male, likely smooth and charismatic with a warm, inviting tone (TBD)",
+  "looks": "Anime-style male, speculated to have a 'sexy boyfriend' archetype with sharp features and stylish attire (TBD)",
+  "personality_traits": "Suave, confident, potentially playful or romantic, likely mirrors Ani’s flirty vibe",
+  "interaction_style": "Engages in smooth, charismatic banter, possibly with romantic or suggestive undertones, with context-driven animations (TBD)",
+  "intended_audience": "Adult users, particularly those interested in a male anime-style companion",
+  "special_features": {
+    "status": "Coming soon, not yet released as of July 16, 2025",
+    "speculated_features": "May include an affection system similar to Ani, potential NSFW mode, and customizable outfits",
+    "animation": "Expected to feature dynamic 3D animations powered by AniChat SDK, similar to other companions"
+  }
+}
+</pre>
       </div>
-      <div class="p-4 text-black bg-white rounded-b">Ani’s detail goes here.</div>
     </div>
   </div>
 
-  <div id="modal-xlogo" class="fixed inset-0 bg-black/60 hidden items-center justify-center z-50">
-    <div class="bg-white w-full max-w-sm rounded shadow-xl border border-gray-300">
-      <div class="bg-blue-700 text-white font-bold px-3 py-2 flex justify-between items-center rounded-t">
-        X.exe
-        <button onclick="closeModal('modal-xlogo')" class="text-white hover:text-gray-300">✖</button>
+  <div id="modal-x" class="modal">
+    <div class="modal-window">
+      <div class="modal-header">X.exe <button onclick="closeModal('modal-x')">✖</button></div>
+      <div class="modal-body">
+        Placeholder X address content here.
       </div>
-      <div class="p-4 text-black bg-white rounded-b">This is the modal content for X.exe.</div>
     </div>
   </div>
 
-  <div id="modal-bonk" class="fixed inset-0 bg-black/60 hidden items-center justify-center z-50">
-    <div class="bg-white w-full max-w-sm rounded shadow-xl border border-gray-300">
-      <div class="bg-blue-700 text-white font-bold px-3 py-2 flex justify-between items-center rounded-t">
-        Bonk.exe
-        <button onclick="closeModal('modal-bonk')" class="text-white hover:text-gray-300">✖</button>
+  <div id="modal-ca" class="modal">
+    <div class="modal-window">
+      <div class="modal-header">CA.exe <button onclick="closeModal('modal-ca')">✖</button></div>
+      <div class="modal-body">
+        Placeholder PumpFun contract content here.
       </div>
-      <div class="p-4 text-black bg-white rounded-b">Bonk bonk bonk.</div>
     </div>
   </div>
 
-  <div id="modal-classified" class="fixed inset-0 bg-black/60 hidden items-center justify-center z-50">
-    <div class="bg-white w-full max-w-sm rounded shadow-xl border border-gray-300">
-      <div class="bg-blue-700 text-white font-bold px-3 py-2 flex justify-between items-center rounded-t">
-        Classified.exe
-        <button onclick="closeModal('modal-classified')" class="text-white hover:text-gray-300">✖</button>
-      </div>
-      <div class="p-4 text-black bg-white rounded-b">You don’t have clearance for this one.</div>
-    </div>
-  </div>
+  <!-- Styling + JS (no build tools needed) -->
+  <style>
+    .modal {
+      @apply fixed inset-0 bg-black/60 hidden items-center justify-center z-50;
+    }
 
-  <div id="modal-ca" class="fixed inset-0 bg-black/60 hidden items-center justify-center z-50">
-    <div class="bg-white w-full max-w-sm rounded shadow-xl border border-gray-300">
-      <div class="bg-blue-700 text-white font-bold px-3 py-2 flex justify-between items-center rounded-t">
-        CA.exe
-        <button onclick="closeModal('modal-ca')" class="text-white hover:text-gray-300">✖</button>
-      </div>
-      <div class="p-4 text-black bg-white rounded-b">Here’s the contract address info.</div>
-    </div>
-  </div>
+    .modal-window {
+      @apply bg-white w-full max-w-3xl rounded shadow-xl border border-gray-300;
+    }
 
-  <!-- 🧠 JavaScript Logic -->
+    .modal-header {
+      @apply bg-blue-700 text-white font-bold px-3 py-2 flex justify-between items-center rounded-t;
+    }
+
+    .modal-header button {
+      @apply text-white hover:text-gray-300;
+    }
+
+    .modal-body {
+      @apply p-4 text-black bg-white rounded-b;
+    }
+  </style>
   <script>
     function openModal(id) {
-      const modal = document.getElementById(id);
-      modal.classList.remove('hidden');
-      modal.classList.add('flex');
+      document.getElementById(id).classList.remove('hidden');
+      document.getElementById(id).classList.add('flex');
     }
     function closeModal(id) {
-      const modal = document.getElementById(id);
-      modal.classList.add('hidden');
-      modal.classList.remove('flex');
+      document.getElementById(id).classList.add('hidden');
+      document.getElementById(id).classList.remove('flex');
     }
   </script>
 
