--- a/index.html
+++ b/index.html
@@ -185,6 +185,27 @@
       modal.classList.remove("flex");
     }
   </script>
+  <!-- 🧱 Fake Windows Taskbar -->
+  <div
+    class="fixed bottom-0 left-0 w-full h-8 bg-gray-300 border-t border-gray-400 flex items-center justify-between px-3 text-xs font-sans z-40">
+    <div class="text-gray-800">Start</div>
+    <div id="clock" class="text-gray-800 font-mono"></div>
+  </div>
+
+  <script>
+    function updateClock() {
+      const options = {
+        timeZone: "America/New_York",
+        hour: "2-digit",
+        minute: "2-digit",
+        second: "2-digit",
+        hour12: false
+      };
+      document.getElementById("clock").textContent = new Intl.DateTimeFormat("en-US", options).format(new Date());
+    }
+    updateClock();
+    setInterval(updateClock, 1000);
+  </script>
 
 </body>
 
