Replace Start text with Windows logo on taskbar

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div class="absolute top-[160px] left-[100px] flex flex-col items-center cursor-pointer"
       onclick="openModal('modal-rudi')">
-      <img src="rudi.png" class="w-12 h-12" />
+      <img src="Rudi.png" class="w-12 h-12" />
       <span class="text-black text-[10px] font-mono mt-1">Rudi.exe</span>
     </div>
 
