Added modals socials

--- a/index.html
+++ b/index.html
@@ -361,6 +361,75 @@ console.log(quantumTrickster.larpAction());</pre>
     </div>
   </div>
 
+  <!-- Bonk.exe Modal -->
+  <div id="modal-bonk" class="fixed inset-0 bg-black/60 hidden items-center justify-center z-50">
+    <div class="bg-white w-full max-w-lg rounded shadow-xl border border-gray-300">
+      <div class="bg-blue-700 text-white font-bold px-3 py-2 flex justify-between items-center rounded-t">
+        Bonk.exe
+        <button onclick="closeModal('modal-bonk')" class="text-white hover:text-gray-300">✖</button>
+      </div>
+      <div class="p-4 text-black bg-white rounded-b overflow-auto max-h-[80vh]">
+        <pre class="text-xs font-mono whitespace-pre-wrap">/*
+  🧠 BONK PROTOCOL INITIATED
+  This virtual payload contains metadata about Bonk.
+  Use responsibly. May cause uncontrollable barking.
+*/
+
+{
+  "token": "BONK",
+  "type": "meme asset",
+  "vibe": "feral energy",
+  "origin": "The barking depths of Solana",
+  "status": "Unstable — and proud of it",
+  "utility": [
+    "Pure chaos",
+    "Memetic virality",
+    "Community-driven mayhem"
+  ],
+  "quote": "BONK to the moon. No brakes. No roadmap. Just BONK."
+}
+</pre>
+      </div>
+    </div>
+  </div>
+
+  <!-- X.exe Modal -->
+  <div id="modal-x" class="fixed inset-0 bg-black/60 hidden items-center justify-center z-50">
+    <div class="bg-white w-full max-w-md rounded shadow-xl border border-gray-300">
+      <div class="bg-blue-700 text-white font-bold px-3 py-2 flex justify-between items-center rounded-t">
+        X.exe
+        <button onclick="closeModal('modal-x')" class="text-white hover:text-gray-300">✖</button>
+      </div>
+      <div class="p-4 text-black bg-white rounded-b text-xs font-mono">
+        <p>🔗 <strong>X.com Link</strong></p>
+        <p class="mt-2">
+          Follow updates, drops, and coded messages from the dev:
+          <br />
+          <a href="https://x.com/your_username_here" target="_blank" class="text-blue-600 underline">
+            https://x.com/your_username_here
+          </a>
+        </p>
+        <p class="mt-4 italic text-gray-600">Replace with your actual X handle or content URL.</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- ContractAddress.exe Modal -->
+  <div id="modal-ca" class="fixed inset-0 bg-black/60 hidden items-center justify-center z-50">
+    <div class="bg-white w-full max-w-md rounded shadow-xl border border-gray-300">
+      <div class="bg-blue-700 text-white font-bold px-3 py-2 flex justify-between items-center rounded-t">
+        ContractAddress.exe
+        <button onclick="closeModal('modal-ca')" class="text-white hover:text-gray-300">✖</button>
+      </div>
+      <div class="p-4 text-black bg-white rounded-b text-xs font-mono">
+        <p>📄 <strong>Official PumpFun Contract</strong></p>
+        <p class="mt-2 break-all select-all">
+          0xDEADbeef1234567890CafeBabe0011223344556677
+        </p>
+        <p class="mt-4 italic text-gray-600">Click to copy if supported, or replace with actual token address.</p>
+      </div>
+    </div>
+  </div>
 
   <!-- JavaScript -->
   <script>
