Added modals socials

--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ console.log(quantumTrickster.larpAction());</pre>
             https://x.com/your_username_here
           </a>
         </p>
-        <p class="mt-4 italic text-gray-600">Replace with your actual X handle or content URL.</p>
+        <p class="mt-4 italic text-gray-600">Follow On X</p>
       </div>
     </div>
   </div>
